...
                    <view key="view" contentMode="scaleToFill" id="6U8-vF-1Jc">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <viewLayoutGuide key="safeArea" id="85q-OE-FNV"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    </view>
                    <navigationItem key="navigationItem" title="ПОШУК" id="KAg-F8-5Be"/>
                    <connections>
                        <segue destination="LKf-qH-p8P" kind="show" identifier="showStudentSchedule" id="aqy-HO-2R4"/>
                        <segue destination="NLJ-ev-Gjc" kind="show" identifier="showStudentExams" id="eKa-Nc-OxE"/>
                        <segue destination="SJe-Xb-SY8" kind="show" identifier="showTeacherSchedule" id="PHd-Z8-Z1I"/>
                        <segue destination="bsg-3b-rw5" kind="show" identifier="showElectiveSchedule" id="UzO-NV-gCJ"/>
                        <segue destination="Aqx-uU-wpy" kind="show" identifier="showTeacherExams" id="x4l-fI-aPh"/>
...
                            <constraint firstItem="Cl7-c7-c13" firstAttribute="bottom" secondItem="UzZ-Ke-Uid" secondAttribute="bottom" constant="90" id="cBa-Bv-Uvl"/>
                            <constraint firstItem="6n1-71-8vl" firstAttribute="leading" secondItem="Cl7-c7-c13" secondAttribute="leading" id="dPr-rK-0AZ"/>
                            <constraint firstItem="Cl7-c7-c13" firstAttribute="trailing" secondItem="6n1-71-8vl" secondAttribute="trailing" id="oCR-3b-Yaz"/>
                            <constraint firstItem="Cl7-c7-c13" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="UzZ-Ke-Uid" secondAttribute="trailing" id="r0Y-Qb-lIh"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="МАПА" id="WSF-XJ-XaX"/>
                    <connections>
                        <outlet property="MapButton" destination="UzZ-Ke-Uid" id="kpV-y6-bGE"/>
                        <outlet property="mapView" destination="6n1-71-8vl" id="Bb0-t2-iEo"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="0Ml-Ad-ySx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
                            <constraint firstItem="AqR-Bs-MGw" firstAttribute="centerX" secondItem="h3X-RE-3mI" secondAttribute="centerX" id="eXf-eU-sbI"/>
                            <constraint firstItem="xWs-7M-tS8" firstAttribute="trailing" secondItem="Uow-kh-wEO" secondAttribute="trailing" id="ffb-Yv-ksf"/>
                            <constraint firstItem="Uow-kh-wEO" firstAttribute="bottom" secondItem="O1t-AR-lZS" secondAttribute="bottom" constant="90" id="sNR-1Y-Gqs"/>
                            <constraint firstItem="AqR-Bs-MGw" firstAttribute="centerY" secondItem="h3X-RE-3mI" secondAttribute="centerY" id="vDe-AP-Qzp"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="ЗАВДАННЯ" id="Lvm-Rb-Vow"/>
                    <connections>
                        <outlet property="addButton" destination="O1t-AR-lZS" id="NBm-Du-reY"/>
                        <outlet property="emptyStateView" destination="AqR-Bs-MGw" id="TJk-Jc-9lu"/>
                        <outlet property="tableView" destination="xWs-7M-tS8" id="Ibe-dw-gNp"/>
                        <segue destination="wu7-qu-ctq" kind="show" identifier="showAddTask" id="tew-9P-gpY"/>
                    </connections>
...
            <point key="canvasLocation" x="4941" y="1143"/>
        </scene>
        <!--Головна-->
        <scene sceneID="NUB-kM-yOk">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="90E-mD-zNU" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Головна" image="house.fill" catalog="system" id="thJ-9z-ncT">
                        <color key="badgeColor" red="0.47450980390000003" green="0.62745098040000002" blue="0.64313725489999995" alpha="1" colorSpace="calibratedRGB"/>
                    </tabBarItem>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="QpG-s7-BdY">
                        <rect key="frame" x="0.0" y="118" width="393" height="54"/>
                        <autoresizingMask key="autoresizingMask"/>
...
            <point key="canvasLocation" x="2674" y="-2601"/>
        </scene>
        <!--Мапа-->
        <scene sceneID="fHj-1n-Czn">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ugT-V4-Vfn" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Мапа" image="map" catalog="system" id="9du-JP-OGz">
                        <color key="badgeColor" red="0.27450980390000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                    </tabBarItem>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="RF5-jb-phL">
                        <rect key="frame" x="0.0" y="118" width="393" height="54"/>
                        <autoresizingMask key="autoresizingMask"/>
...
            <point key="canvasLocation" x="2673" y="-1009"/>
        </scene>
        <!--Завдання-->
        <scene sceneID="5Vm-XP-eb3">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="13u-WT-haj" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Завдання" image="checklist" catalog="system" id="09U-fX-GlK">
                        <color key="badgeColor" red="0.27450980390000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                    </tabBarItem>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="GIf-We-WqF">
                        <rect key="frame" x="0.0" y="118" width="393" height="54"/>
                        <autoresizingMask key="autoresizingMask"/>
...
            <point key="canvasLocation" x="2673" y="497"/>
        </scene>
        <!--Налаштування-->
        <scene sceneID="mL1-RP-cKN">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="r32-Hl-lJn" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Налаштування" image="gear" catalog="system" id="aqd-T8-5ts">
                        <color key="badgeColor" red="0.27450980390000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                    </tabBarItem>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="dsP-RT-jEo">
                        <rect key="frame" x="0.0" y="118" width="393" height="54"/>
                        <autoresizingMask key="autoresizingMask"/>
...
